--- a/.github/workflows/bokeh-docker-build.yml
+++ b/.github/workflows/bokeh-docker-build.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Set date environment variable
         run: |
           echo "iso_date=$(date -u --iso-8601)" >> $GITHUB_ENV
+          echo "branch_name=$(echo ${{ github.ref_name }} | tr / -)" >> $GITHUB_ENV
 
       - name: Checkout source
         uses: actions/checkout@v2
@@ -35,6 +36,7 @@ jobs:
           tags: |
             bokeh-dev:latest
             bokeh-dev:${{ env.iso_date }}
+            bokeh-dev:${{ env.branch_name }}
 
       - name: Determine chrome version in image
         env:
@@ -42,11 +44,11 @@ jobs:
         run: |
           echo "chrome_version=$(scripts/docker/docker_run.sh bokeh-dev | tail -1 | awk -F'.' '{print $1}')" >> $GITHUB_ENV
 
-      - name: Tag image with chrome version
-        run: |
-          docker images bokeh-dev
-          docker image tag bokeh-dev bokeh-dev:chrome_${{ env.chrome_version }}
-          docker images bokeh-dev
+#      - name: Tag image with chrome version
+#        run: |
+#          docker images bokeh-dev
+#          docker image tag bokeh-dev bokeh-dev:chrome_${{ env.chrome_version }}
+#          docker images bokeh-dev
 
       - name: Save image to tar file
         run: |
@@ -61,7 +63,7 @@ jobs:
       - name: Run tests
         if: ${{ github.event.inputs.run_tests }}
         run: |
-          docker run -v $GITHUB_WORKSPACE:/bokeh -u $(id --user):$(id --group) --rm -e BOKEH_DOCKER_BUILD=1 -e BOKEH_DOCKER_TEST=1 bokeh-dev:latest
+          docker run -v $GITHUB_WORKSPACE:/bokeh -u $(id -u):$(id -g) --rm -e BOKEH_DOCKER_BUILD=1 -e BOKEH_DOCKER_TEST=1 bokeh-dev:latest
 
       - name: Collect results
         if: ${{ github.event.inputs.run_tests }}
