--- a/.github/workflows/bokeh-docker-build.yml
+++ b/.github/workflows/bokeh-docker-build.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-south-1
+          aws-region: us-east-1
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -54,7 +54,7 @@ jobs:
       - name: Upload image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: some_name_related_to_bokeh
+          ECR_REPOSITORY: bokeh-dev
         run: |
           OS=$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')
           SRC="bokehjs/test/baselines/${OS}"
