--- a/.github/workflows/bokeh-docker-build.yml
+++ b/.github/workflows/bokeh-docker-build.yml
@@ -28,18 +28,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build image
-        uses: docker/build-push-action@v3
-        with:
-          context: scripts/docker
-          load: true
-          tags: |
-            bokeh-dev:latest
-            bokeh-dev:${{ env.iso_date }}
-            bokeh-dev:${{ env.branch_name }}
-
-      ############# Start of ECR upload block ###############
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -51,24 +39,67 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Upload image to Amazon ECR
+      - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: bokeh-dev
         run: |
-          OS=$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')
-          SRC="bokehjs/test/baselines/${OS}"
-          DST="bokehjs-report/${SRC}"
-          mkdir -p ${DST}
-          if [[ -e ${SRC}/report.json ]];
-          then
-            CHANGED=$(git status --short ${SRC}/\*.blf ${SRC}/\*.png | cut -c4-)
-            cp ${SRC}/report.{json,out} ${CHANGED} ${DST}
-          fi
+          docker build -t $ECR_REGISTRY/bokeh-dev:${{ env.iso_date }} scripts/docker
+          docker push $ECR_REGISTRY/bokeh-dev:${{ env.iso_date }}
 
-      - name: Upload test report
-        if: ${{ github.event.inputs.run_tests }}
-        uses: actions/upload-artifact@v1
-        with:
-          name: artifact
-          path: bokehjs-report
+
+
+#      - name: Build image
+#        uses: docker/build-push-action@v3
+#        env:
+#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#        with:
+#          context: scripts/docker
+#          load: true
+#          tags: |
+#            $ECR_REGISTRY/bokeh-dev:latest
+#            $ECR_REGISTRY/bokeh-dev:${{ env.iso_date }}
+#            $ECR_REGISTRY/bokeh-dev:${{ env.branch_name }}
+
+#      - name: Upload image to Amazon ECR
+#        env:
+#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#        run: |
+#          docker push $ECR_REGISTRY/bokeh-dev:latest
+#          docker push $ECR_REGISTRY/bokeh-dev:${{ env.iso_date }}
+#          docker push $ECR_REGISTRY/bokeh-dev:${{ env.branch_name }}
+
+
+#      - name: Save image to tar file
+#        run: |
+#          docker save -o bokeh-dev.tar bokeh-dev
+
+#      - name: Upload artifact
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: artifact
+#          path: bokeh-dev.tar
+
+#      - name: Run tests
+#        if: ${{ github.event.inputs.run_tests }}
+#        run: |
+#          docker run -v $GITHUB_WORKSPACE:/bokeh -u $(id -u):$(id -g) --rm -e BOKEH_DOCKER_BUILD=1 -e BOKEH_DOCKER_TEST=1 bokeh-dev:latest
+
+#      - name: Collect results
+#        if: ${{ github.event.inputs.run_tests }}
+#        run: |
+#          OS=$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')
+#          SRC="bokehjs/test/baselines/${OS}"
+#          DST="bokehjs-report/${SRC}"
+#          mkdir -p ${DST}
+#          if [[ -e ${SRC}/report.json ]];
+#          then
+#            CHANGED=$(git status --short ${SRC}/\*.blf ${SRC}/\*.png | cut -c4-)
+#            cp ${SRC}/report.json ${CHANGED} ${DST}
+#          fi
+
+#      - name: Upload test report
+#        if: ${{ github.event.inputs.run_tests }}
+#        uses: actions/upload-artifact@v1
+#        with:
+#          name: artifact
+#          path: bokehjs-report
