--- a/.github/workflows/bokeh-docker-build.yml
+++ b/.github/workflows/bokeh-docker-build.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          registry-type: public
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
