--- a/.github/workflows/bokeh-docker-build.yml
+++ b/.github/workflows/bokeh-docker-build.yml
@@ -28,25 +28,32 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+#       - name: Configure AWS credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: us-east-1
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-        with:
-          registry-type: public
+#       - name: Login to Amazon ECR
+#         id: login-ecr
+#         uses: aws-actions/amazon-ecr-login@v1
+#         with:
+#           registry-type: public
 
-      - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: bokehservice
+          password: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Build and tag image
         run: |
-          docker build -t $ECR_REGISTRY/e9u3b2f3/bokeh-dev:${{ env.iso_date }} scripts/docker
-          docker push $ECR_REGISTRY/e9u3b2f3/bokeh-dev:${{ env.iso_date }}
+          docker build -t bokeh/bokeh-dev:${{ env.iso_date }} scripts/docker
+          
+      - name: Push image to Docker
+        run: |
+          docker push bokeh/bokeh-dev::${{ env.iso_date }}
 
 
 
