--- a/.github/workflows/bokeh-docker-build.yml
+++ b/.github/workflows/bokeh-docker-build.yml
@@ -27,55 +27,47 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        
-#       - name: Configure AWS credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           aws-region: us-east-1
 
-#       - name: Login to Amazon ECR
-#         id: login-ecr
-#         uses: aws-actions/amazon-ecr-login@v1
-#         with:
-#           registry-type: public
-
-      - name: Login to Docker
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: bokehservice
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build and tag image
-        run: |
-          docker build -t bokeh/bokeh-dev:${{ env.iso_date }} scripts/docker
-          
-      - name: Push image to Docker
-        run: |
-          docker push bokeh/bokeh-dev:${{ env.iso_date }}
+      - name: Build image
+        uses: docker/build-push-action@v3
+        with:
+          context: scripts/docker
+          load: true
+          tags: |
+            bokeh/bokeh-dev:latest
+            bokeh/bokeh-dev:${{ env.iso_date }}
+            bokeh/bokeh-dev:${{ env.branch_name }}
 
 
 
-#      - name: Build image
-#        uses: docker/build-push-action@v3
-#        env:
-#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-#        with:
-#          context: scripts/docker
-#          load: true
-#          tags: |
-#            $ECR_REGISTRY/bokeh-dev:latest
-#            $ECR_REGISTRY/bokeh-dev:${{ env.iso_date }}
-#            $ECR_REGISTRY/bokeh-dev:${{ env.branch_name }}
 
-#      - name: Upload image to Amazon ECR
-#        env:
-#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+
+      - name: Push image to Docker Hub
+        uses: docker/build-push-action@v3
+        with:
+          context: scripts/docker
+          push: true
+          tags: |
+            bokeh/bokeh-dev:latest
+            bokeh/bokeh-dev:${{ env.iso_date }}
+            bokeh/bokeh-dev:${{ env.branch_name }}
+
+
+
+
+#      - name: Build and tag image
 #        run: |
-#          docker push $ECR_REGISTRY/bokeh-dev:latest
-#          docker push $ECR_REGISTRY/bokeh-dev:${{ env.iso_date }}
-#          docker push $ECR_REGISTRY/bokeh-dev:${{ env.branch_name }}
+#          docker build -t bokeh/bokeh-dev:${{ env.iso_date }} scripts/docker
+#
+#      - name: Push image to Docker
+#        run: |
+#          docker push bokeh/bokeh-dev:${{ env.iso_date }}
 
 
 #      - name: Save image to tar file
