--- a/.github/workflows/bokehjs-ci.yml
+++ b/.github/workflows/bokehjs-ci.yml
@@ -103,3 +103,37 @@ jobs:
         with:
           name: bokehjs-report
           path: bokehjs-report
+
+  test_docker:
+    runs-on: ubuntu-latest
+    env:
+      IMAGE_TAG: bokeh/bokeh-dev:latest  # Eventually this will be a named release/branch not "latest"
+
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+
+      - name: Start Docker container, build Bokeh and run tests.
+        env:
+          BOKEH_DOCKER_BUILD: 1
+          BOKEH_DOCKER_TEST: 1
+        run: |
+          scripts/docker/docker_run.sh $IMAGE_TAG
+
+      - name: Collect results
+        shell: bash
+        run: |
+          SRC="bokehjs/test/baselines/linux"
+          DST="bokehjs-report-docker/${SRC}"
+          mkdir -p ${DST}
+          if [[ -e ${SRC}/report.json ]];
+          then
+            CHANGED=$(git status --short ${SRC}/\*.blf ${SRC}/\*.png | cut -c4-)
+            cp ${SRC}/report.json ${CHANGED} ${DST}
+          fi
+
+      - name: Upload report
+        uses: actions/upload-artifact@v1
+        with:
+          name: bokehjs-report-docker
+          path: bokehjs-report-docker
