--- a/.github/workflows/bokehjs-ci.yml
+++ b/.github/workflows/bokehjs-ci.yml
@@ -5,7 +5,11 @@ on:
     branches:
       - main
       - branch-*
+    paths:
+      #- 'bokehjs/**'   #### temporarily removed ####
   pull_request:
+    paths:
+      #- 'bokehjs/**'   #### temporarily removed ####
 
 jobs:
 
